--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csb-gittest-master",
+  "name": "csb-git-test-1b",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
